--- a/TrabajoPracticoGrupal9/src/main/resources/templates/clientes.html
+++ b/TrabajoPracticoGrupal9/src/main/resources/templates/clientes.html
@@ -49,7 +49,7 @@
 									</td>
 									
 									<td> 
-										<a th:href="@{/cliente/editar/}+${c.id}" class= "btn btn-warning" >EDITAR</a>
+										<!--  <a th:href="@{/cliente/editar/}+${c.id}" class= "btn btn-warning" >EDITAR</a>-->
 										<br><br>
 										<a th:href="@{/cliente/eliminar/}+${c.id}" class= "btn btn-danger" >ELIMINAR</a>
 										
